# hang_detector

./: CMakeLists.txt  LICENSE  hangdetector.pc.cmake
include/: HangDetector.h  hang_action.h  hang_detector.h  hang_detector_glib.h  hang_detector_utils.h
src/: CMakeLists.txt  HangDetector.cc  hang_action.cc  hang_detector.cc  hang_detector_glib.cc
test/: main.cc
unittests/: CMakeLists.txt  test_actions.cc  test_main.cc
